@@ -4,6 +4,11 @@
 
 * harp_product_sort() now takes a list of variables.
 
+* The python harp.import_product() function now uses the C library to perform
+  the contactenation of products.
+
+* Added post_operations argument to python harp.import_product() function.
+
 * Besides using a polygon of >=3 vertices, a geospatial area can now also be
   defined via a bounding rect. Use e.g. 'latitude_bounds {time,2}' and
   'longitude_bounds {time,2}' to define the min/max of the bounding rect.
